--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id "dev.architectury.loom" version "1.7-SNAPSHOT" apply false
 	id "me.shedaniel.unified-publishing" version "0.1.+" apply false
 	id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
+	id "com.github.ben-manes.versions" version "$version"
 }
 
 architectury {
