--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx4096M
 
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.1
+minecraft_version=1.21.9
+yarn_mappings=1.21.9+build.1
 enabled_platforms=fabric,neoforge
 
 archives_base_name=betterbeds
@@ -11,11 +11,11 @@ release_type=release
 curseforge_id=443782
 modrinth_id=kKwy3HU9
 
-fabric_loader_version=0.16.9
-fabric_api_version=0.111.0+1.21.4
+fabric_loader_version=0.17.2
+fabric_api_version=0.134.0+1.21.9
 
-neoforge_version=21.4.10-beta
+neoforge_version=21.9.11-beta
 yarn_mappings_patch_neoforge_version = 1.21+build.4
 
-quilt_loader_version=0.19.0-beta.18
-quilt_fabric_api_version=7.0.1+0.83.0-1.20
+quilt_loader_version=0.18.9
+quilt_fabric_api_version=7.0.6+0.85.0-1.20.1
