--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 plugins {
 	id "architectury-plugin" version "3.4-SNAPSHOT"
-	id "dev.architectury.loom" version "1.7-SNAPSHOT" apply false
+	id "dev.architectury.loom" version "1.11-SNAPSHOT" apply false
 	id "me.shedaniel.unified-publishing" version "0.1.+" apply false
 	id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
 }
 
 architectury {
-	minecraft = rootProject.minecraft_version
+    injectInjectables = false
+    minecraft = rootProject.minecraft_version
 }
 
 subprojects {
@@ -31,15 +32,13 @@ allprojects {
 	version = rootProject.mod_version
 	group = rootProject.maven_group
 
-	repositories {
-		// Add repositories to retrieve artifacts from in here.
-		// You should only use this when depending on other mods because
-		// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-		// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-		// for more information about repositories.
-	}
+repositories {
+    maven {
+        url = "https://api.modrinth.com/maven"
+    }
+}
 
-	tasks.withType(JavaCompile) {
+	tasks.withType(JavaCompile).configureEach {
 		options.encoding = "UTF-8"
 		options.release = 21
 	}
@@ -47,7 +46,7 @@ allprojects {
 		releaseChangelog = {
 			def changes = new StringBuilder()
 			changes << "## Better Beds v$project.version for $project.minecraft_version\n[View the changelog](https://www.github.com/TeamMidnightDust/BetterBeds/commits/)"
-			def proc = "git log --max-count=1 --pretty=format:%s".execute()
+			def proc = "git log --max-count=200 --pretty=format:%s".execute()
 			proc.in.eachLine { line ->
 				def processedLine = line.toString()
 				if (!processedLine.contains("New translations") && !processedLine.contains("Merge") && !processedLine.contains("branch")) {
